--- a/Instagram/app/src/main/AndroidManifest.xml
+++ b/Instagram/app/src/main/AndroidManifest.xml
@@ -3,25 +3,27 @@
     package="com.cursoandroid.instagram">
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Instagram">
-        <activity android:name=".activity.CadastroActivity"></activity>
+        <activity android:name=".activity.EditarPerfilActivity"
+            android:parentActivityName=".activity.MainActivity">
+        </activity>
 
-        <activity android:name=".activity.MainActivity"></activity>
-
-        <activity android:name=".activity.LoginActivity"
+        <activity android:name=".activity.CadastroActivity" />
+        <activity android:name=".activity.MainActivity" />
+        <activity
+            android:name=".activity.LoginActivity"
             android:theme="@style/AppThemeLogin.Instagram">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
