--- a/Instagram/app/build.gradle
+++ b/Instagram/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     //Dependência da lib Universal image loader
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
+    //Dependência Like button
+    implementation 'com.github.jd-alexander:LikeButton:0.2.3'
 
 }
 
